day03/fakeapi/v2_fakeapi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: v2-fakeapi-svc
  namespace: myns
  labels:
    app: fakeapi
    version: v2
spec:
  type: ClusterIP
  selector:
    app: fakeapi
    name: v2-fakeapi-po
    version: v2
  ports:
  - name: v2-api
    port: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2-fakeapi-deploy
  namespace: myns
  labels:
    app: fakeapi
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fakeapi
      name: v2-fakeapi-po
      version: v2
  template:
    metadata:
      name: v2-fakeapi-po
      labels:
        app: fakeapi
        name: v2-fakeapi-po
        version: v2
    spec:
      containers:
      - name: v2-fakeapi-container
        image: chukmunnlee/fake-api:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
